--- a/Exercícios/ex22/fundo6.html
+++ b/Exercícios/ex22/fundo6.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            /*Shorthand background
+            ordem: color > image > position > repeat > (size - tem que ser separado) > attachment*/
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +34,9 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut ducimus accusamus deleniti, ad autem debitis inventore saepe, quisquam doloremque eos doloribus, at laborum! Necessitatibus numquam cumque, animi repellendus nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, nostrum deserunt, dicta exercitationem nobis dolorum tempore facilis at similique officiis repudiandae et in soluta mollitia iste sit illo nisi quis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error architecto voluptatum hic esse rerum dolor sunt pariatur reprehenderit ea excepturi animi rem consectetur voluptas doloremque, quibusdam nam vero aut dolore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut ducimus accusamus deleniti, ad autem debitis inventore saepe, quisquam doloremque eos doloribus, at laborum! Necessitatibus numquam cumque, animi repellendus nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, nostrum deserunt, dicta exercitationem nobis dolorum tempore facilis at similique officiis repudiandae et in soluta mollitia iste sit illo nisi quis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error architecto voluptatum hic esse rerum dolor sunt pariatur reprehenderit ea excepturi animi rem consectetur voluptas doloremque, quibusdam nam vero aut dolore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut ducimus accusamus deleniti, ad autem debitis inventore saepe, quisquam doloremque eos doloribus, at laborum! Necessitatibus numquam cumque, animi repellendus nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, nostrum deserunt, dicta exercitationem nobis dolorum tempore facilis at similique officiis repudiandae et in soluta mollitia iste sit illo nisi quis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error architecto voluptatum hic esse rerum dolor sunt pariatur reprehenderit ea excepturi animi rem consectetur voluptas doloremque, quibusdam nam vero aut dolore.</p>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut ducimus accusamus deleniti, ad autem debitis inventore saepe, quisquam doloremque eos doloribus, at laborum! Necessitatibus numquam cumque, animi repellendus nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, nostrum deserunt, dicta exercitationem nobis dolorum tempore facilis at similique officiis repudiandae et in soluta mollitia iste sit illo nisi quis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error architecto voluptatum hic esse rerum dolor sunt pariatur reprehenderit ea excepturi animi rem consectetur voluptas doloremque, quibusdam nam vero aut dolore.</p>
     </main>
 </body>
